--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/marinacor1/pizza-express#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "jade": "^1.11.0"
   },
   "devDependencies": {
     "mocha": "^2.5.3",
